# titanic

./: .#cabin.py  .#titanic_revised4.py  .gitignore  Makefile  cabin.py  histgram.py  histgram2.py  histgram3.py  ngnet.py  ngnet_oem.py  pyproject.toml  result.csv  scatter.py  submission.csv  titanic.py  titanic2.py  titanic_revised1.py  titanic_revised2.py  titanic_revised3.py  titanic_revised4.py  titanic_revised5.py
