[tool.poetry]
name = "stockdeal"
version = "0.1.0"
description = ""
authors = ["Hajime Fujita <hajime.fujita@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "*"
pandas = "^1.3.0"
mplfinance = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
